# bazel-kotlinx-repro

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
repro/kotlinx/: AndroidManifest.xml  BUILD.bazel  MainActivity.kt
repro/kotlinx/res/values/: strings.xml  themes.xml
repro/kotlinx/theme/: BUILD.bazel  Color.kt  Theme.kt  Type.kt
